like counter UI + spacing fixes for PostInteractions block
- Implemented visible like counter (only shown when >0)

- Added likeWrapper to keep like icon + number count grouped together

- Improved alignment and spacing between all post interaction icons

--- a/kobenx/src/components/PostInteractions.css
+++ b/kobenx/src/components/PostInteractions.css
@@ -1,45 +1,65 @@
- .PostInteractions{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 8px;
-    gap: 16px;
-  }
+.PostInteractions {
+  display: flex;
+  align-items: center;
+  gap: 20px;   
+  margin-top: 8px;
+  padding-left: 0px; 
+  padding-right: 0px;
+  margin-left: 0px; 
+  margin-right: 0px; 
+}
 
-  .likeButton,
-  .commentButton,
-  .bookmarkButton,
-  .repostButton {
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    color: rgb(36, 111, 124);
-    font-size: 2px;
-  }
-  
-  .likeButton:hover,
-  .commentButton:hover,
-  .bookmarkButton:hover,
-  .repostButton:hover {
-    color: rgb(208, 72, 14);
-  }
+.PostInteractions button {
+  margin: 0px;
+  padding: 0px;
+}
 
-  .likeButton:focus,
+.likeWrapper {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;  
+  padding: 0px;
+  margin: 0px;
+}
+
+.likeButton,
+.commentButton,
+.bookmarkButton,
+.repostButton {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: rgb(36, 111, 124);
+}
+
+/* fix: like icon vertical alignment */
+.likeButton svg {
+  transform: translateY(-1px);
+}
+
+.likeButton:hover,
+.commentButton:hover,
+.bookmarkButton:hover,
+.repostButton:hover {
+  color: rgb(208, 72, 14);
+}
+
+.likeButton:focus,
 .commentButton:focus,
 .bookmarkButton:focus,
 .repostButton:focus {
   outline: none;
 }
 
-  .likesCount {
-    font-size: 15px;      
-    font-weight: 600;
-    color: rgb(36, 111, 124);
-    margin-left: -6px;     
-    margin-right: 4px;    
-    display: flex;
-    align-items: center;  
-  }
+.likesCount {
+  font-size: 15px;
+  font-weight: 600;
+  color: rgb(36, 111, 124);
+  line-height: 1;
+  margin: 0;
+  padding: 0;
+}
